fixed another weird spacing issue with sidebar

--- a/styles/sass/layout/_navigation.sass
+++ b/styles/sass/layout/_navigation.sass
@@ -25,7 +25,6 @@ nav
   top: 0
   z-index: 10001
   overflow-x: auto !important
-  margin-bottom: 20px
 
 #menu-btn,
 .navigation-links > a,
